--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.example.android.sunshine"
+        applicationId "com.example.android.sunshine.mobile"
         minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
@@ -18,7 +18,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"YOUR_API_KEY"'
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"YOUR API KEY"'
     }
 }
 
